# igps_tools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  env.template
.github/workflows/: release.yml
auth/: Cargo.toml
auth/src/: lib.rs
workout/: Cargo.toml
workout/examples/: W2_5_125.fit  fit_read.rs  igps_create_workout.rs  workout.json
workout/src/: main.rs  util.rs
workout/src/api/: mod.rs  utils.rs
xingzhe/: Cargo.toml
xingzhe/examples/: read_template.rs
xingzhe/src/: api.rs  build_fit.rs  main.rs
