[package]
name = "workout"
version = "0.1.1"
edition = "2021"
description = '''
Import the training plan from https://intervals.icu/ into iGPS
'''
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fit-rust = "0.1.4"
reqwest = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6.1", features = ["v4"] }
walkdir = "2.4.0"
clap = { version = "4", features = ["derive"] }
auth = { path = "../auth" }
zip = { version = "0.6" }